--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "backmuseum",
+  "version": "1.0.0",
+  "description": "api museum",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "seed": "node ./api/seed/index.js"
+  },
+  "keywords": [],
+  "author": "ghmdevs",
+  "license": "ISC",
+  "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
